# bagfile-analysis-system

./: .gitignore  COMPREHENSIVE_RECOVERY_BREAKTHROUGH_REPORT.md  Cargo.toml  ENHANCED_WRECK_DETECTION_README.md  EXECUTION_SUMMARY_SONARSNIFFER.md  FINAL_INTEGRATION_SUMMARY.md  GUI_CODE_EXAMPLES.md  GUI_ENHANCEMENT_COMPLETE.md  GUI_ENHANCEMENT_FINAL_SUMMARY.md  GUI_ENHANCEMENT_INDEX.md  GUI_ENHANCEMENT_QUICK_CHECKLIST.md  GUI_ENHANCEMENT_VISUAL_SUMMARY.md  GUI_IMPROVEMENT_ANALYSIS.md  GUI_README.md  LIVE_TESTING_SESSION.md  MBTiles_README.md  PHASE_11_COMPLETION_REPORT.md  PHASE_12_1_COMPLETION_REPORT.md  PHASE_12_COMPLETION_REPORT.md  PHASE_12_IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  README.md  RUST_SUCCESS_SUMMARY.md  SONARSNIFFER_GUI_STATUS.md  SONARSNIFFER_OPTIMIZATION_COMPLETE.md  SONARSNIFFER_REAL_DATA_TESTING.md  SONARSNIFFER_SUMMARY.md  Swayze2019-1.xlsx  advanced_bag_scanner.py  advanced_bag_scanner_runner.py  cesarops.py  check_coordinates.py  check_pdf_refs.py  check_sample_data.py  check_swayze_data.py  checkpoint_system.py  clear_swayze_data.py  complete_pipeline.py  comprehensive_bag_gui.py  count_wrecks_records.py  (+45 more)
.github/: copilot-instructions.md
bag_processor/: bag_analyzer_gui.py
development_and_tools/: advanced_redaction_breaker.py  bag_alignment_corrector.py  bag_metadata_analyzer.py  bag_visualization_generator.py  batch_feature_parser.py  breakthrough_analysis.py  checkpoint_manager.py  checkpoint_system.py  comprehensive_pdf_extractor.py  comprehensive_redaction_recovery.py  display_results.py  display_unified_results.py  enhanced_bag_scanner.py  enhanced_wreck_scanner.py  fast_ml_reconstructor.py  feature_coordinate_viewer.py  feature_pattern_parser.py  image_feature_detector.py  image_text_extractor.py  liberated_coordinate_search.py  manual_breakthrough.py  manual_mapping_helper.py  multi_mode_scanner.py  noaa_bag_downloader.py  optimized_bag_scanner.py  pdf_text_extractor.py  real_coordinate_maritime_gallery.py  redaction_breaker_results_20251014_142955.json  redaction_breaker_results_20251014_143017.json  robust_bag_scanner.py  run_enhanced_scan.py  run_redaction_breaker.py  scrub_detection_engine.py  simple_analysis_helper.py  simple_image_detector.py  simple_redaction_investigator.py  summarize_results.py  targeted_table_extractor.py  unified_redaction_breaker.py  unified_redaction_breaker_results_20251014_160341.json  (+1 more)
docs/: EMAG2_INGEST.md  INGEST_DATA_POLICY.md  next_steps.md
erie_remote/: Cargo.toml
erie_remote/src/: candidate.rs  goce.rs  icesat2.rs  lib.rs  main.rs  sar.rs
(+88 files in other folders)
