[package]
name = "bag_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"

[lib]
name = "bag_processor"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.21"