[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bag-processor"
version = "0.1.0"
description = "High-performance BAG file processing with Rust acceleration"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "rasterio>=1.2.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
]

[tool.maturin]
python-source = "python"
module-name = "bag_processor"