[package]
name        = "erie_remote"
version     = "0.1.0"
edition     = "2021"
authors     = ["SonarSniffer Contributors"]
description = "Multi-physics remote-sensing pipeline for Lake Erie deep-wreck detection: SAR coherence, ICESat-2 lidar, GOCE gravity"
license     = "MIT OR Apache-2.0"
keywords    = ["SAR", "icesat2", "goce", "remote-sensing", "lake-erie"]

[dependencies]
# async HTTP
reqwest       = { version = "0.12", features = ["json", "blocking"] }
tokio         = { version = "1",    features = ["full"] }

# Serialisation
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"

# Numerics / array maths (same NDArray version as curvelet crate)
ndarray       = "0.16"
num-complex   = "0.4"
num-traits    = "0.2"

# HDF5 for ICESat-2 ATL13/ATL03
# Requires HDF5 C library.  On Windows: `choco install hdf5` or
# set HDF5_DIR env var to your installation.
# Feature-flag so the crate still compiles if HDF5 is absent.
hdf5          = { version = "0.8", optional = true }

# GeoTIFF parse for Sentinel-1 GRD tiles
tiff          = "0.9"

# CLI
clap          = { version = "4", features = ["derive", "env"] }

# Errors / logging
thiserror     = "2"
anyhow        = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV output
csv           = "1"

# Path dependency: curvelet crate for SAR backscatter filtering
curvelet      = { path = "../curvelete rust", features = ["parallel"] }

[dev-dependencies]
approx  = "0.5"
tempfile = "3"

[features]
default    = []
# Enable HDF5 support (ICESat-2 ATL13 native parsing)
hdf5-support = ["hdf5"]

[[bin]]
name = "erie_remote"
path = "src/main.rs"
